// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditLabel> should render when [show=false] 1`] = `
<Modal
  label="Edit Label"
  onEnter={[Function]}
  onHide={[MockFunction]}
  show={false}
>
  <ModalHeader>
    Edit a label
  </ModalHeader>
  <Modal__ModalBody>
    <LabelForm
      color="#3C8786"
      description="BarFoo"
      errorColor=""
      errorName=""
      name="FooBar"
      onChange={[Function]}
      onColorChange={[Function]}
      onSubmit={[Function]}
    />
  </Modal__ModalBody>
</Modal>
`;

exports[`<EditLabel> should render when [show=true] 1`] = `
<Modal
  label="Edit Label"
  onEnter={[Function]}
  onHide={[MockFunction]}
  show={true}
>
  <ModalHeader>
    Edit a label
  </ModalHeader>
  <Modal__ModalBody>
    <LabelForm
      color="#3C8786"
      description="BarFoo"
      errorColor=""
      errorName=""
      name="FooBar"
      onChange={[Function]}
      onColorChange={[Function]}
      onSubmit={[Function]}
    />
  </Modal__ModalBody>
</Modal>
`;
